<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_filter_date"
        android:title="@string/filter_by_date"
        android:icon="@android:drawable/ic_menu_my_calendar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_filter_organizer"
        android:title="@string/filter_by_organizer"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_clear_filters"
        android:title="@string/clear_filters"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_csv"
        android:title="@string/export_csv"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="ifRoom" />

</menu>

