<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph_organizer"
    app:startDestination="@id/navigation_my_events">

    <fragment
        android:id="@+id/navigation_browse"
        android:name="com.example.pickme.ui.events.EventBrowseFragment"
        android:label="@string/title_browse" />

    <fragment
        android:id="@+id/navigation_my_events"
        android:name="com.example.pickme.ui.events.OrganizerDashboardFragment"
        android:label="@string/title_my_events" />

    <fragment
        android:id="@+id/navigation_invitations"
        android:name="com.example.pickme.ui.invitations.InvitationsFragment"
        android:label="@string/title_invitations" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.pickme.ui.profile.ProfileFragment"
        android:label="@string/title_profile" />
</navigation>

